<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" 
                android:id="@+id/RelativeLayout1" 
                android:background="@android:color/white" 
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                xmlns:android="http://schemas.android.com/apk/res/android">

            <Button
                android:id="@+id/continuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuar"
                android:textColor="#20B2AA"
                android:layout_alignParentRight="true" 
                android:layout_alignParentBottom="true" />
    
    <ScrollView android:id="@+id/scrollView1" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_alignParentTop="true" 
                android:layout_above="@id/continuar" 
                style="@style/Scroll">
                
        <RelativeLayout android:orientation="vertical" 
                        android:id="@+id/RelativeLayout2" 
                        android:layout_width="fill_parent" 
                        android:layout_height="fill_parent">

            <TextView android:id="@+id/Titulo"
                      style="@style/TextoGrande"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentTop="true"
                      android:layout_centerHorizontal="true"
                      android:text="@string/tus_datos"
                      android:textColor="@color/base1" />
            
            <TextView android:id="@+id/text1"
                      style="@style/TextoPequenyo"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/padding_large"
                      android:layout_marginRight="@dimen/padding_large"
                      android:layout_marginTop="@dimen/padding_medium"
                      android:text="@string/cuantos_por_dia"
                      android:layout_below="@id/Titulo"/>

            <EditText android:id="@+id/cigarrillos_por_dia"
                      style="@style/Edit"
                      android:layout_width="80.0dip"
                      android:layout_height="wrap_content"
                      android:layout_centerHorizontal="true"
                      android:layout_marginLeft="@dimen/padding_large"
                      android:layout_marginRight="@dimen/padding_large"
                      android:inputType="numberSigned"
                      android:layout_below="@id/text1" >
                <requestFocus />
            </EditText>
            
            <TextView android:id="@+id/text2"
                      style="@style/TextoPequenyo"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/cigarrillos_por_dia"
                      android:layout_alignLeft="@id/text1"
                      android:text="@string/dia_dejado_fumar"/>

            <!-- 
            <EditText
                android:id="@+id/fecha_inicio"
                style="@style/Edit"
                android:layout_width="80.0dip"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:inputType="numberSigned" />
            -->
            <!--  
            <DatePicker
                android:id="@+id/fecha_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  
                android:layout_centerHorizontal="true"
                android:layout_below="@id/text2" />
            -->

            <EditText
                android:id="@+id/fecha_inicio"
                style="@style/Edit"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_centerHorizontal="true"
                android:layout_width="180.0dip"
                android:editable="false"
                android:ems="10"/>

            <Button
                android:id="@+id/btn_set_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text3"
                android:layout_alignRight="@+id/text1"
                android:layout_alignTop="@+id/fecha_inicio"
                android:layout_toRightOf="@+id/fecha_inicio"
                android:text="Set"
                android:textColor="#20B2AA" />
                        
            <TextView
                android:id="@+id/text3"
                style="@style/TextoPequenyo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text1"
                android:text="@string/precio_habitual"
                android:layout_below="@id/fecha_inicio" />

            <EditText
                android:id="@+id/precio"
                style="@style/Edit"
                android:layout_width="80.0dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:inputType="numberDecimal" 
                android:layout_below="@id/text3"/>

            <TextView
                android:id="@+id/text4"
                style="@style/TextoPequenyo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text1"
                android:text="@string/cig_cagetilla"
                android:layout_below="@id/precio" />

            <EditText
                android:id="@+id/cantidad"
                style="@style/Edit"
                android:layout_width="80.0dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:inputType="numberDecimal" 
                android:layout_below="@id/text4"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>